snapshot-tests/tests/snapshots/parser__bad_underscores__double_leading.snap
---
source: snapshot-tests/tests/parser.rs
expression: error
---
error[UnquotedString]: invalid TOML value, did you mean to use a quoted string? at foo
  ┌─ double_leading:1:7
  │
1 │ foo = __0
  │       ^^^ string is not quoted
